Maybe fix dockerfile