@@ -11,4 +11,5 @@ COPY --from=builder application/dependencies/ ./
 COPY --from=builder application/snapshot-dependencies/ ./
 COPY --from=builder application/spring-boot-loader/ ./
 COPY --from=builder application/application/ ./
+ENV JAVA_TOOL_OPTIONS --enable-preview
 ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
